package com.example.cryptocoach.utils

object TestTags {

    // Écrans - Titres
    const val DASHBOARD_TITLE = "dashboard_title"
    const val EDUCATION_TITLE = "education_title"
    const val PATTERN_TITLE = "pattern_title"
    const val SIMULATOR_TITLE = "simulator_title"
    const val SETTINGS_TITLE = "settings_title"
    const val ABOUT_TITLE = "about_title"

    // Tags pour le menu Drawer
    const val DRAWER_DASHBOARD = "drawer_dashboard"
    const val DRAWER_EDUCATION = "drawer_education"
    const val DRAWER_PATTERNS = "drawer_patterns"
    const val DRAWER_SIMULATOR = "drawer_simulator"
    const val DRAWER_SETTINGS = "drawer_settings"
    const val DRAWER_ABOUT = "drawer_about"

    const val SETTINGS_SCREEN = "settings_screen"
    const val SETTINGS_THEME_ITEM = "settings_theme_item"
    const val SETTINGS_LANGUAGE_ITEM = "settings_language_item"
    const val THEME_DIALOG = "theme_dialog"
    const val LANGUAGE_DIALOG = "language_dialog"
}